# django-hookshot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  hookshot.code-workspace  pyproject.toml  setup.cfg
.circleci/: config.yml
src/hookshot/: apps.py  models.py  registry.py  urls.py  views.py
testproject/: application.py  pytest.ini  setup.sh
testproject/tests/: conftest.py  test_registry.py
